fix: :bug: generated password text color (dark mode)

--- a/src/styles/templates/_password.scss
+++ b/src/styles/templates/_password.scss
@@ -32,9 +32,11 @@
 		padding-right: 5rem;
 		font-family: ui-monospace, monospace;
 		font-size: 1rem;
-		border: 1px solid var(--primary-color);
+		accent-color: var(--accent-color);
+		border: 1px solid var(--accent-color);
 		border-radius: 0.5rem;
-		outline: none;
+		outline: invert;
+		background: var(--bg-color);
 		color: var(--text-color);
 		transition:
 			border-color 0.2s,
@@ -42,6 +44,13 @@
 
 		&:focus {
 			box-shadow: var(--box-shadow);
+			accent-color: var(--primary-color);
+		}
+
+		// on selection
+		&::selection {
+			background-color: var(--accent-color);
+			color: var(--bg-color);
 		}
 
 		&::placeholder {
